--- a/style.css
+++ b/style.css
@@ -1,17 +1,31 @@
-body{
-	width: 1200px;
-	margin: auto;
+*{
+	margin: 0;
+	padding: 0;
 }
-.img{
+body{
 	width: 100%;
-	display: block;
-	position: relative;
-	bottom: 0;
+	max-width: 1200px;
+	margin: auto;
 }
 .banner{
 	text-align: center;
+	position: relative;
+	width: 100%;
 	height: 300px;
 	overflow: hidden;
+}
+.wrap{
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+.img{
+	position: absolute;
+	left: -600px;
+	/*bottom: -80px;*/
+}
+.bottom{
+	bottom:-80px;
 }
 .closed{
 	height: 40px;
@@ -20,5 +34,15 @@ body{
 	height: 300px;
 }
 .transition{
-	transition: 1s;
+	transition:1s;
+}
+.btn{
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	background-color: #000;
+	border: 0;
+	border-radius: 2px;
+	color:#fff;
+	cursor: pointer;
 }
