--- a/style.css
+++ b/style.css
@@ -2,30 +2,62 @@
 	margin: 0;
 	padding: 0;
 }
-body{
+/*body{
 	width: 100%;
 	max-width: 1200px;
-	margin: auto;
+	margin: 0 auto;
 }
 .banner{
-	text-align: center;
 	position: relative;
 	width: 100%;
 	height: 300px;
 	overflow: hidden;
+	outline:1px solid #f00;
 }
 .wrap{
 	width: 100%;
 	height: 100%;
-	position: relative;
+	position: absolute;
+	top:0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
 }
 .img{
-	position: absolute;
-	left: -600px;
-	/*bottom: -80px;*/
+	
+}*/
+body{
+	width: 100%;
+	max-width: 1200px;
+	margin: 0 auto;
+}
+
+.banner{
+	height: 300px;
+	overflow: hidden;
+	position: relative;
+}
+.wrap{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	max-width: 1200px;
+	margin: 0 auto;
+}
+.img{
+	position: relative;
+	
 }
 .bottom{
-	bottom:-80px;
+	bottom:300px;
+}
+.closing{
+	height: 40px;
+}
+.opening{
+	height: 300px;
 }
 .closed{
 	height: 40px;
@@ -33,6 +65,7 @@ body{
 .opened{
 	height: 300px;
 }
+
 .transition{
 	transition:1s;
 }
@@ -42,7 +75,31 @@ body{
 	right: 0;
 	background-color: #000;
 	border: 0;
-	border-radius: 2px;
-	color:#fff;
+	border-radius: 3px 0 0 0;
+	color:#666;
 	cursor: pointer;
+	padding: 4px 10px 4px 8px;
+	box-sizing: border-box;
+	font-size:10px;
+}
+.btn:after{
+	content: '';
+	display: block;
+	width: 0px;
+	height: 0px;
+	border-top: 0px;
+	border-right:3px solid transparent;
+	border-left: 3px solid transparent;
+	border-bottom: 3px solid #666;
+	position: absolute;
+	right: 2px;
+	bottom: 8px;
+}
+.btn:hover,.btn:hover::after{
+	color:#fff;
+}
+
+.btn_open{
+	border-top: 3px solid #666;
+	border-bottom: 0px;
 }
