--- a/style.css
+++ b/style.css
@@ -73,33 +73,35 @@ body{
 	position: absolute;
 	bottom: 0;
 	right: 0;
-	background-color: #000;
+	background-color: #323232;
 	border: 0;
 	border-radius: 3px 0 0 0;
-	color:#666;
+	color:#A3A4A3;
 	cursor: pointer;
-	padding: 4px 10px 4px 8px;
+	padding: 5px 12px 3px 9px;
 	box-sizing: border-box;
-	font-size:10px;
+	font-size:12px;
+
 }
-.btn:after{
-	content: '';
-	display: block;
+.tri{
 	width: 0px;
 	height: 0px;
 	border-top: 0px;
 	border-right:3px solid transparent;
 	border-left: 3px solid transparent;
-	border-bottom: 3px solid #666;
+	border-bottom: 3px solid #A3A4A3;
 	position: absolute;
-	right: 2px;
+	right: 4px;
 	bottom: 8px;
 }
-.btn:hover,.btn:hover::after{
+/*.btn:hover{
 	color:#fff;
 }
-
+.tri:hover{
+	border-bottom: 3px solid #fff;
+}
+*/
 .btn_open{
-	border-top: 3px solid #666;
+	border-top: 3px solid #A3A4A3;
 	border-bottom: 0px;
 }
